--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
---allow-all-external
-
-Django==1.9.9
-djangorestframework==3.4.6
-django-extensions==1.6.7
-mysql-python
+Django==3.2
+djangorestframework==3.12.4
+django-extensions==3.1.1
+mysqlclient==2.0.3
