--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "codemirror": "CodeMirror#5.13.2",
     "components-font-awesome": "^4.5.0",
     "showdown": "^1.3.0",
-    "markdown-delight-editor": "5f4d038130d7b22899e094641f35b1b884ebdae4"
+    "markdown-delight-editor": "0.1.13"
   },
   "appPath": "inapp_survey/static/javascript/apps"
 }
